--- a/src/css/order.scss
+++ b/src/css/order.scss
@@ -5,11 +5,9 @@
   &__wrapper {
     border: 1px solid var(--light-grey);
     border-radius: 16px;
-    margin-top: 32px;
-    margin-bottom: 60px;
+
     margin-inline: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 32px 16px 60px 16px;
 
     @media (min-width: 768px) {
       max-width: 710px;
@@ -105,16 +103,16 @@
     width: 100%;
     padding: 12px 24px;
     background-color: var(--blue);
+    border: 1px solid var(--blue);
     border-radius: 32px;
     color: var(--white);
     font-size: 12px;
     text-align: center;
     margin-bottom: 24px;
     transition: background-color 0.2s ease-in-out;
-    
+
     &:hover,
     &:active {
-      padding: 11px 23px;
       background-color: var(--white);
       border: 1px solid var(--blue);
       color: var(--blue);
